cmfPath Extension for rendering Routes, option classes in menu.html.twig

--- a/Resources/views/Default/menu.html.twig
+++ b/Resources/views/Default/menu.html.twig
@@ -1,4 +1,4 @@
-<ul class="{{ menu.name }}">
+<ul class="{% if options.classes is defined %}{{ options.classes }} {% endif %}{{ menu.name }}">
     {% for item in menu.items %}
         {{ renderMenuItem(item) }}
     {% endfor %}
