--- a/Resources/views/Default/menuItem.html.twig
+++ b/Resources/views/Default/menuItem.html.twig
@@ -1,6 +1,6 @@
 {% set hasSub = (item.items|length ? true : false) %}
 
-<li {% if hasSub %}class="dropdown"{% endif %}>
+<li class="{% if hasSub %}dropdown {% endif %}{% if item.active is defined or item.inTree is defined %}active {% endif %}">
     <a {% if hasSub %}class="dropdown-toggle" data-toggle="dropdown" href="#" {% else %}href="{{ cmfPath(item.nodeRoute) }}"{% endif %}>{{ item.name }}</a>
     {% if hasSub %}
         {{ renderMenu(item, {'isSub' : true, 'classes' : 'dropdown-menu' }) }}
